--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# h_0 = the amount of new individuals"
+    "# h_0 = the amount of new individuals will be"
    ]
   },
   {
